# browsy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench_ab.ps1  bench_ab_short.ps1  bench_ab_single.ps1  bench_browsy.ps1  bench_browsy_speed.ps1  bench_interact.ps1  bench_jina.ps1  bench_tokens.ps1
.github/workflows/: docs.yml  pypi.yml
benchmark/: 2026-02-12-benchmark.md  2026-02-12-competitor-benchmark.md  README.md  ab_worker.ps1  bench_ab2.ps1  bench_ab_parallel.ps1  bench_browsy_adaptive.ps1  bench_browsy_report.ps1  bench_login.ps1  bench_pagetype.ps1  bench_parallel.ps1  bench_playwright_parallel.ps1  loop.ps1  manifest.json  report.ps1
benchmark/govform-lab/: README.md  bench_govlab.ps1  index.html  server.ps1
benchmark/govform-lab/forms/: benefits-step1.html  name.html  sign-in.html
benchmark/playwright/: playwright_parallel.cjs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/css/: mod.rs  properties.rs  selector.rs
crates/core/src/dom/: mod.rs
crates/core/src/fetch/: mod.rs  session.rs
crates/core/src/js/: mod.rs
crates/core/src/layout/: mod.rs
crates/core/src/output/: mod.rs
crates/core/tests/: benchmark.rs  css_layout.rs  flows.rs  govform_lab.rs  harvest.rs  integration.rs  js.rs  output.rs  perf.rs  realworld.rs  session.rs
crates/core/tests/corpus/: manifest.json
crates/core/tests/corpus/snapshots/: bbc-news.html  benefits-step2.html  bing.html  consent.html  craigslist.html  ddg-homepage.html  ddg-results.html  errors.html  fixture-2fa-separate.html  fixture-2fa.html  fixture-cloudflare.html  fixture-contact.html  fixture-cookie-banner.html  fixture-download.html  fixture-form-generic.html  fixture-hcaptcha.html  fixture-login.html  fixture-recaptcha.html  fixture-register.html  fixture-search-results-url.html  fixture-search-results.html  fixture-turnstile.html  github-anthropics.html  github-login.html  gitlab-login.html  health-intake.html  hn-frontpage.html  hn-login.html  lobsters-frontpage.html  lobsters-login.html  mdn-html.html  old-reddit-rust.html  old-reddit.html  pypi-login.html  python-org.html  stackoverflow-login.html  upload.html  wikipedia-rust.html
crates/core/tests/fixtures/: captcha.html  dashboard.html  email_with_code.html  inbox.html  oauth.html  search.html
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  main.rs
crates/mcp/tests/: tools.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/browsy/: __init__.py  autogen.py  crewai.py  langchain.py  openai.py  smolagents.py
crates/python/browsy/_integrations/: __init__.py  _shared.py  autogen.py  crewai.py  langchain.py  openai.py  smolagents.py
crates/python/src/: lib.rs
crates/python/tests/: test_autogen.py  test_browsy.py  test_crewai.py  test_langchain.py  test_openai.py  test_smolagents.py
crates/server/: Cargo.toml  README.md
crates/server/src/: a2a.rs  lib.rs  main.rs
crates/server/tests/: a2a.rs  api.rs
docs/plans/: 2026-02-10-agentbrowser-design.md  2026-02-11-framework-integrations-design.md  2026-02-11-framework-integrations-impl.md
docs/reports/: 2026-02-11-benchmark-summary.md  2026-02-12-agent-browser-parallel-i1.csv  2026-02-12-agent-browser-parallel-i1.json  2026-02-12-agent-browser-parallel-i10.csv  2026-02-12-agent-browser-parallel-i10.json  2026-02-12-agent-browser-parallel-i5.csv  2026-02-12-agent-browser-parallel-i5.json  2026-02-12-benchmark-summary.csv  2026-02-12-benchmark-summary.md  2026-02-12-benchmark.md  2026-02-12-browsy-live.txt  2026-02-12-browsy-parallel-fetch-i1.csv  2026-02-12-browsy-parallel-fetch-i1.json  2026-02-12-browsy-parallel-fetch-i10.csv  2026-02-12-browsy-parallel-fetch-i10.json  2026-02-12-browsy-parallel-fetch-i5.csv  2026-02-12-browsy-parallel-fetch-i5.json  2026-02-12-browsy-parallel-parse-i1.csv  2026-02-12-browsy-parallel-parse-i1.json  2026-02-12-browsy-parallel-parse-i10.csv  2026-02-12-browsy-parallel-parse-i10.json  2026-02-12-browsy-parallel-parse-i5.csv  2026-02-12-browsy-parallel-parse-i5.json  2026-02-12-govform-lab.csv  2026-02-12-parallel-benchmark.md  2026-02-12-parallel-competitor-benchmark.md  2026-02-12-playwright-parallel-i1.csv  2026-02-12-playwright-parallel-i1.json  2026-02-12-playwright-parallel-i10.csv  2026-02-12-playwright-parallel-i10.json  2026-02-12-playwright-parallel-i5.csv  2026-02-12-playwright-parallel-i5.json  README.md  latest.md
docs/site/: book.toml
docs/site/src/: SUMMARY.md  a2a.md  architecture.md  cli.md  framework-integrations.md  installation.md  introduction.md  javascript.md  mcp-server.md  openclaw.md  output-formats.md  page-intelligence.md  python.md  quickstart.md  ref-action-recipes.md  ref-captcha.md  ref-css-engine.md  ref-page-types.md  rest-api.md  session-api.md  spatial-dom.md  web-search.md
examples/: crewai_tool.py  langchain_tool.py  openai_functions.py
js/: README.md  package.json
js/src/: client.ts  config.ts  context.ts  index.ts  langchain.ts  openai.ts  schemas.ts  server-manager.ts  session-manager.ts  types.ts  vercel-ai.ts  zod-to-json-schema.ts
js/test/: client.test.ts  integration.test.ts  langchain.test.ts  openai.test.ts  schemas.test.ts  session-manager.test.ts  vercel-ai.test.ts
js/test/fixtures/: mock-browsy-server.ts
