[package]
name = "browsy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-render browser engine for AI agents — CLI"
repository = "https://github.com/GhostPeony/browsy"
homepage = "https://browsy.dev"
keywords = ["browser", "cli", "ai", "agent"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "browsy"
path = "src/main.rs"

[features]
default = ["serve"]
serve = ["dep:browsy-server", "dep:tokio", "dep:axum"]

[dependencies]
browsy-core = { path = "../core" }
browsy-server = { path = "../server", optional = true }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
