[package]
name = "agentbrowser-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-render browser engine for AI agents"

[dependencies]
html5ever = "0.36"
markup5ever = "0.36"
markup5ever_rcdom = "0.36"
taffy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
url = { version = "2", optional = true }

[features]
default = ["fetch"]
fetch = ["dep:reqwest", "dep:url"]

[dev-dependencies]
pretty_assertions = "1"
