[package]
name = "browsy-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-render browser engine for AI agents — browsy.dev"
repository = "https://github.com/GhostPeony/browsy"
homepage = "https://browsy.dev"
keywords = ["browser", "html", "ai", "agent", "spatial-dom"]
categories = ["web-programming", "parsing"]

[dependencies]
html5ever = "0.36"
markup5ever = "0.36"
markup5ever_rcdom = "0.36"
taffy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "cookies"], optional = true }
url = "2"

[features]
default = ["fetch"]
fetch = ["dep:reqwest"]

[dev-dependencies]
pretty_assertions = "1"
