[package]
name = "browsy-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP server for browsy — zero-render browser engine for AI agents"
repository = "https://github.com/anthropics/browsy"
keywords = ["mcp", "browser", "ai", "agent"]
categories = ["web-programming", "development-tools"]

[lib]
name = "browsy_mcp"
path = "src/lib.rs"

[[bin]]
name = "browsy-mcp"
path = "src/main.rs"

[dependencies]
browsy-core = { path = "../core" }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
