[package]
name = "browsy-python"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Python bindings for browsy — zero-render browser engine for AI agents"
repository = "https://github.com/GhostPeony/browsy"
homepage = "https://browsy.dev"
keywords = ["browser", "python", "ai", "agent"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "browsy_python"
crate-type = ["cdylib"]

[dependencies]
browsy-core = { version = "0.1.1", path = "../core" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
serde_json = "1"
