[package]
name = "browsy-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "REST API + A2A server for browsy"
repository = "https://github.com/GhostPeony/browsy"

[dependencies]
browsy-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
axum-test = "18"
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
